compiler/testData/diagnostics/testsWithStdLib/varargs/kt5534.fir.kt
fun test() {
    val p: Array<String> = arrayOf("a")
    <!INAPPLICABLE_CANDIDATE!>foo<!>(*p)
}

fun foo(vararg a: String?) = a